cmss/main/default/objects/CampaignMember__c/CampaignMember__c.object-meta.xml
<CustomObject>
    <label>Campaign Member</label>
    <nameField>
        <label>Campaign Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>