cmss/main/default/objects/CampaignMember__c/fields/AccountEmail__c.field-meta.xml
<CustomField>
    <fullName>AccountEmail__c</fullName>
    <formula>IF( Account__r.PersonContact.IsPersonAccount = true, Account__r.PersonContact.Email, Account__r.CompanyEmail__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acount Email</label>
    <type>Text</type>
</CustomField>