cmss/main/default/objects/CampaignMember__c/fields/AccountPhone__c.field-meta.xml
<CustomField>
    <fullName>AccountPhone__c</fullName>
    <description>Dotahuje pole phone z objektu account</description>
    <formula>IF(Account__r.PersonContact.IsPersonAccount = true, Account__r.PersonContact.Phone , Account__r.Phone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Phone</label>
    <type>Text</type>
</CustomField>