cmss/main/default/objects/CampaignMember__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>CampaignMembers</relationshipName>
    <type>Lookup</type>
</CustomField>