cmss/main/default/objects/CampaignMember__c/fields/CampaignEndDate__c.field-meta.xml
<CustomField>
    <fullName>CampaignEndDate__c</fullName>
    <formula>Campaign__r.EndDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign End Date</label>
    <type>Date</type>
</CustomField>