cmss/main/default/objects/CampaignMember__c/fields/CampaignIsActive__c.field-meta.xml
<CustomField>
    <fullName>CampaignIsActive__c</fullName>
    <formula>Campaign__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign active</label>
    <type>Checkbox</type>
</CustomField>