cmss/main/default/objects/CampaignMember__c/fields/CombinedAccountName__c.field-meta.xml
<CustomField>
    <fullName>CombinedAccountName__c</fullName>
    <description>Combine the important information to be shown in the pinned part of compact layout.</description>
    <formula>IF( Account__r.IsPersonAccount = true,
	
    IF( ISBLANK( Account__r.PersonTitle ), &quot;&quot;, Account__r.PersonTitle &amp; &quot; &quot; ) &amp; Account__r.FirstName &amp; &quot; &quot; &amp; Account__r.LastName &amp; BLANKVALUE( Account__r.Suffix , &quot;&quot; ) &amp; &quot;, RČ: &quot; &amp; Account__r.PersonalIdentificationNr__c  &amp; &quot;, tel.: &quot; &amp; Account__r.Phone
		 	,
			 Account__r.Name &amp; &quot;, IČO: &quot; &amp; Account__r.CompanyRegistrationNumber__c &amp; &quot;, tel.: &quot; &amp; Account__r.Phone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combined Account Name</label>
    <type>Text</type>
</CustomField>